k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjsbasicapp
  labels:
    app: nextjsbasicapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjsbasicapp
  template:
    metadata:
      labels:
        app: nextjsbasicapp
    spec:
      containers:
      - name: nextjsbasicapp
        image: regmicrodemo.azurecr.io/nextjsbasicapp:latest
        ports:
        - containerPort: 3000
