k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjsbasicapp-svc
  labels:
    app: nextjsbasicapp
spec:
  type: ClusterIP
  selector:
    app: nextjsbasicapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
